# Ragger

./: .gitignore  COPYRIGHT_EXAMPLE.py  COPYRIGHT_HEADER.txt  README.md  TODO.md  pyproject.toml  requirements.txt  test_completion.py
playground/: README.md  directory_to_docling_json.py  json_to_md_with_descriptions.py  markdown_to_vector.py  ollama_test.py  pdf_batch_processor.py  pdf_to_accessible_markdown.py  pdf_to_docling_json.py  pdf_to_json_multi_methods.py  requirements-playground.txt
src/ragger/: __init__.py  __main__.py  config.py  main.py
src/ragger/core/: __init__.py  commands.py  completer.py  exceptions.py  rag.py
src/ragger/interfaces/: __init__.py  cli.py  command_handlers.py
src/ragger/interfaces/handlers/: __init__.py  chunk_management.py  configuration.py  file_operations.py  history.py  prompt.py  search.py
src/ragger/ui/: __init__.py  resources.py
src/ragger/ui/terminal/: __init__.py  app_state.py  format_util.py  mode.py  text_utils.py  ui.py
src/ragger/utils/: __init__.py  conversation_history.py  helpers.py  langchain_utils.py  logging_config.py
