[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragger"
version = "0.1.0"
dynamic = []
description = "RAG-based interactive query application"
readme = "README.md"
requires-python = ">=3.8"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Jakob Bolliger", email = "ragger@jpost.ch"},  # Update with your info
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.15", 
    "langchain-huggingface>=0.0.2",
    "langchain-ollama>=0.0.1",
    "prompt_toolkit>=3.0.38",
    "faiss-gpu>=1.7.1",
    "numpy<2",
]

[project.optional-dependencies]
playground = [
    "docling>=2.0.0",
]

[project.scripts]
ragger = "ragger.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ragger", "ragger.core", "ragger.interfaces", "ragger.utils", "ragger.ui"]